# c-archetypes

./: CMakeLists.txt
examples/: CMakeLists.txt  simple.c
include/: archetypes.h
src/: archetypes.c  common.c
